Fix(web-css): Collapse utility classes #DS-327

--- a/packages/web/src/scss/components/Collapse/_Collapse.scss
+++ b/packages/web/src/scss/components/Collapse/_Collapse.scss
@@ -6,9 +6,15 @@
     position: relative;
     height: 0;
     overflow: hidden;
+    visibility: hidden;
     transition-property: height;
     transition-duration: theme.$collapse-transition-duration;
     transition-timing-function: theme.$collapse-transition-timing;
+
+    &.is-open,
+    &.is-transition {
+        visibility: visible;
+    }
 
     @each $breakpoint-name, $breakpoint-value in theme.$breakpoints {
         @if $breakpoint-value > 0 {
@@ -17,6 +23,7 @@
                     /* stylelint-disable declaration-no-important -- This Important rule is important here because it overrides inline styles applied by JavaScript */
                     height: auto !important;
                     /* stylelint-enable declaration-no-important */
+                    visibility: visible;
                 }
             }
         }
